# rune

./: .gitignore  LICENSE
.github/workflows/: release.yml
daemon/: package-lock.json  package.json  server.js
extension/: manifest.json  options.html  options.js  popup.html  popup.js  scraper.js
rune-pkg/: package.json
rune-pkg/scripts/: postinstall.js
rune-pkg/src/: cli.js
tui/: Cargo.toml
tui/src/: main.rs
