[package]
name = "rune-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
dirs = "6.0.0"
notify = "8.2.0"
open = "5.3.5"
ratatui = "0.30.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
